# QuadCraft

./: AGENTS.md  CMakeLists.txt  QuadCraftAjax.jsp  QuadCraft_ Technical Framework for a Tetrahedral-B.md  Quadray Coordinates_ A Comprehensive Analysis of T.md  README.md  Technical Supplement_ Dimensional Conversion Betwe.md  build.sh
4d_chess/: AGENTS.md  README.md  index.html
4d_chess/docs/: game-rules.md  quadray-math.md  youtube-script.md
4d_chess/js/: AGENTS.md  README.md  analysis.js  board.js  game.js  quadray.js  renderer.js
4d_chess/tests/: test.html  test_all.js  test_geometry.js  test_quadray.js
docs/: AGENTS.md  README.md  architecture.md  games.md  quadray_coordinates.md
docs/development/: AGENTS.md  README.md  api_reference.md  architecture.md  asset_creation_guide.md  ccp_ball_grid_system.md  chunk_system.md  cone_plane_intersection_rendering.md  entity_system.md  gamepad_integration_guide.md  javascript_implementation.md  javascript_performance_optimization.md  modding_guide.md  multiplayer_system.md  paintbrush_system.md  physics_system.md  quaternion_camera_system.md  realtime_code_evaluation.md  setup_guide.md  testing_guide.md
docs/game_design/: AGENTS.md  README.md  advanced_building_techniques.md  block_system.md  controls_and_navigation.md  gameplay_overview.md  world_generation.md
docs/mathematics/: AGENTS.md  README.md  ivm_synergetics.md  quadray_coordinates.md  (+1 more)
games/: .gitignore  AGENTS.md  GAMES_INDEX.md  README.md  dummy.js  games_config.json  run.sh  run_games.py  update_matrix.py
src/: AGENTS.md  README.md  main.cpp
(+543 files in other folders)
